api additions
